# HKGAPResources

./: .env.example  HKGAP PAPER LONG VERSION v1.1.docx  Naba_Protein folding_Primer 2.docx  Naba_Protien Folding_Primer 1.docx  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
hkgap_review/: README.md  __init__.py  cli.py  config.py  known_issues.py  pdf_loader.py  renderer.py  schemas.py
hkgap_review/agents/: __init__.py  base.py  editor_in_chief.py  prior_art.py  science_communicator.py  simulation_methodologist.py  statistics_reproducibility.py  structural_biophysicist.py
hkgap_review/prompts/: editor_in_chief.md  prior_art.md  science_communicator.md  simulation_methodologist.md  statistics_reproducibility.md  structural_biophysicist.md
reviews/: short_paper_review.md
tests/: test_agents_offline.py  test_cli_end_to_end.py  test_pdf_loader.py  test_renderer.py  test_schemas.py
