[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hkgap_review"
version = "0.1.0"
description = "Multi-agent critical review workflow for HKGAP short paper"
readme = "hkgap_review/README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0",
  "pydantic>=2",
  "pypdf>=4.0.0",
  "tenacity>=8.2.3",
  "rich>=13.7.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hkgap_review*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
